RbA Build/src/objects/rSuite_External_Link__c.object
<CustomObject>
    <description>hold external links for the rSuite mobile application</description>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>the name displayed in rSuite for the link</description>
        <inlineHelpText>Enter the Name to be displayed in rSuite</inlineHelpText>
        <label>Display Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Finance company for this external link</description>
        <inlineHelpText>Select a finance company</inlineHelpText>
        <label>Finance Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Finance Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>rSuite External Links</relationshipLabel>
        <relationshipName>rSuite_External_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_Path__c</fullName>
        <description>the external link path - putting in a text field because URL fields are too short</description>
        <inlineHelpText>enter the external link path - e.g. www.google.com/search?q=foo</inlineHelpText>
        <label>Link Path</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_Type__c</fullName>
        <description>type of link path - web or app</description>
        <inlineHelpText>Select the link type</inlineHelpText>
        <label>Link Type</label>
        <picklist>
            <picklistValues>
                <fullName>app</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>web URL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rSuite_Configuration__c</fullName>
        <description>Parent configuration for this external link</description>
        <inlineHelpText>Select the rSuite Configuration</inlineHelpText>
        <label>rSuite Configuration</label>
        <referenceTo>rSuite_Configuration__c</referenceTo>
        <relationshipLabel>rSuite External Links</relationshipLabel>
        <relationshipName>rSuite_External_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>rSuite External Link</label>
    <nameField>
        <displayFormat>rSEL-{0000}</displayFormat>
        <label>rSuite External Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>rSuite External Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>